--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -1,7 +1,7 @@
 # OpenHands Frontend Development Configuration
 
-# Backend API URL (SaaS mode on port 3000)
-VITE_BACKEND_BASE_URL=localhost:3000
+# Backend API URL - leave empty to use Vite proxy
+# VITE_BACKEND_BASE_URL=localhost:3000
 
 # Enable mock API for development
 VITE_MOCK_API=false
