feat: add Stripe billing integration and API key encryption system

--- a/.env.backup
+++ b/.env.backup
@@ -18,18 +18,18 @@ DB_PASSWORD=postgres
 STORAGE_BACKEND=database
 
 # File storage for events and workspace files
-# FILE_STORE=local
-# FILE_STORE_PATH=./workspace
+FILE_STORE=local
+FILE_STORE_PATH=./workspace
 
-# MinIO for file storage (ENABLED)
-FILE_STORE=s3
-AWS_ACCESS_KEY_ID=herd
-AWS_SECRET_ACCESS_KEY=secretkey
-AWS_S3_BUCKET=qlurplatform
-AWS_S3_ENDPOINT=https://minio.herd.test
-AWS_S3_SECURE=true
-AWS_DEFAULT_REGION=us-east-1
-AWS_S3_VERIFY_SSL=false
+# Optional: Use MinIO for file storage (uncomment to enable)
+# FILE_STORE=s3
+# AWS_ACCESS_KEY_ID=herd
+# AWS_SECRET_ACCESS_KEY=secretkey
+# AWS_S3_BUCKET=qlurplatform
+# AWS_S3_ENDPOINT=https://minio.herd.test
+# AWS_S3_SECURE=true
+# AWS_DEFAULT_REGION=us-east-1
+# AWS_S3_VERIFY_SSL=false
 
 # ====================
 # Authentication
