--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "sirv-cli": "^3.0.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.6",
     "vite": "^7.0.6",
     "web-vitals": "^5.0.3",
     "ws": "^8.18.2"
