--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,10 @@
     "@heroui/react": "^2.8.2",
     "@microlink/react-json-view": "^1.26.2",
     "@monaco-editor/react": "^4.7.0-rc.0",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
     "@react-types/shared": "^3.31.0",
@@ -23,6 +27,7 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.4.0",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-config-airbnb-typescript": "^18.0.0",
     "framer-motion": "^12.23.11",
