--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "node": ">=22.0.0"
   },
   "dependencies": {
+    "@fontsource-variable/host-grotesk": "^5.2.6",
     "@heroui/react": "^2.8.2",
     "@microlink/react-json-view": "^1.26.2",
     "@monaco-editor/react": "^4.7.0-rc.0",
@@ -38,6 +39,7 @@
     "jose": "^6.0.12",
     "lucide-react": "^0.533.0",
     "monaco-editor": "^0.52.2",
+    "motion": "^12.23.12",
     "posthog-js": "^1.258.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -47,6 +49,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
+    "react-resizable-panels": "^3.0.4",
     "react-router": "^7.7.1",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.9",
