--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "remark-gfm": "^4.0.1",
     "sirv-cli": "^3.0.1",
     "socket.io-client": "^4.8.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.6",
     "vite": "^7.0.6",
