--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "node": ">=22.0.0"
   },
   "dependencies": {
+    "@fontsource-variable/dancing-script": "^5.2.6",
     "@fontsource-variable/host-grotesk": "^5.2.6",
     "@heroui/react": "^2.8.2",
     "@microlink/react-json-view": "^1.26.2",
@@ -24,6 +25,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.7.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.4.0",
@@ -60,6 +62,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.6",
+    "uuid": "^11.1.0",
     "vite": "^7.0.6",
     "web-vitals": "^5.0.3",
     "ws": "^8.18.2"
