--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-highlight": "^0.15.0",
+    "react-horizontal-scrolling-menu": "^8.2.0",
     "react-hot-toast": "^2.5.1",
     "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
